--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Luan Fernandes Ferraz : Formado em Análise e Desenvolvimento de Sistemas - 24 anos - Solteiro - Cubatão/SP">
-
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Luan Fernandes Ferraz</title>
@@ -29,48 +28,60 @@
       <section id="main_content" class="inner">
         <h3>
 <a id="objetivo-profissional" class="anchor" href="#objetivo-profissional" aria-hidden="true"><span class="octicon octicon-link"></span></a>Objetivo Profissional</h3>
-
-<p>Atuar na área de desenvolvimento de sistemas e aplicativos.</p>
-
+<ul class="nav navbar-nav">
+<li><p>Atuar na área de desenvolvimento de sistemas e aplicativos.</p></li>
+</ul>
 <h3>
 <a id="formação-acadêmica" class="anchor" href="#forma%C3%A7%C3%A3o-acad%C3%AAmica" aria-hidden="true"><span class="octicon octicon-link"></span></a>Formação Acadêmica</h3>
-
+<ul class="nav navbar-nav">
+<li>
 <p>Graduação Tecnológica em Análise e Desenvolvimento de Sistemas - Centro Universitário Monte Serrat (2013 - 2015). <br>
+</li><li>
 Técnico em Informática - ETEC - Centro Paula Souza (2011 - 2012). <br>
+</li><li>
 Técnico em Logística - ETEC - Centro Paula Souza (2009 - 2010).</p>
-
+<li>
+</ul>
 <h3>
 <a id="conhecimentos" class="anchor" href="#conhecimentos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conhecimentos</h3>
-
+<ul class="nav navbar-nav">
+<li>
 <p>Java; JSP; JPA; JSF; RichFaces; JasperReports; metodologia Scrum/XP; Oracle Database; MySQL; PHP; HTML 5; CSS 3; JBoss; Eclipse; Netbeans.</p>
-
+</li></ul>
 <h3>
 <a id="experiência" class="anchor" href="#experi%C3%AAncia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experiência</h3>
 
+ <ul class="nav navbar-nav">
+ <li>
 <p>Estágio como desenvolvedor java <br>
 Prodesan - Progresso e Desenvolvimento de Santos <br>
 Junho de 2014 - Junho de 2015 | Santos/SP <br>
 Programador java atuando por um ano no Sistema de Gestão Escolares de Santos (SIGES), desenvolvendo novos módulos, realizando correção de falhas e aplicando melhorias <br> <br></p>
-
+</li>
+ <li>
 <p>Instrutor de Informática <br>
 S.O.S Educação Profissional <br>
 Julho de 2013 – Maio de 2014 | Cubatão/SP <br>
 Lecionando informática básica, Word, Power Point, Excel, ambiente GNU/Linux , Corel Draw, Photoshop e In Design <br><br></p>
-
+ </li>
+  <li>
 <p>Programador – Autônomo <br>
 Novembro de 2011 – Dezembro de 2012 <br>
 Desenvolvimento de sistemas em parceria com a empresa Halltech para diversos segmentos como transportadoras, consultório de psicologia e corretoras de seguro.</p>
-
+ </li>
+</ul>
 <h3>
 <a id="idiomas" class="anchor" href="#idiomas" aria-hidden="true"><span class="octicon octicon-link"></span></a>Idiomas</h3>
-
-<p>Português nativo. <br>
-Inglês avançado. </p>
-
+<ul class="nav navbar-nav">
+<li>
+<p>Português nativo. <br></li>
+<li>
+Inglês avançado. </p></li>
+</ul>
 <h3>
 <a id="contato" class="anchor" href="#contato" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contato</h3>
 
-<p>Telefone: (013) 99633-8573 <br>
+<p>Telefone: <b>(013) 99633-8573</b> <br>
 <a href="https://www.linkedin.com/profile/view?id=AAIAABpl9pMBW_iHMaeXMo2OlSVycM4uUFhngZQ&amp;trk=nav_responsive_tab_profile">LinkedIn </a>
 <br>
 <a href="https://github.com/LuanFerraz">GitHub </a></p>
@@ -83,8 +94,6 @@ Inglês avançado. </p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-    
 
   </body>
 </html>
