--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a id="forkme_banner" href="https://github.com/LuanFerraz">View on GitHub</a>
 
           <h1 id="project_title">Luan Fernandes Ferraz</h1>
-          <h2 id="project_tagline">Formado em Análise e Desenvolvimento de Sistemas - 24 anos - Solteiro - Cubatão/SP</h2>
+          <h2 id="project_tagline">Formado em Análise e Desenvolvimento de Sistemas - 24 anos - Solteiro - Cubatão/SP - luanferrazlff@gmail.com</h2>
 
         </header>
     </div>
@@ -29,8 +29,22 @@
         <h3>
 <a id="objetivo-profissional" class="anchor" href="#objetivo-profissional" aria-hidden="true"><span class="octicon octicon-link"></span></a>Objetivo Profissional</h3>
 <ul class="nav navbar-nav">
-<li><p>Atuar na área de desenvolvimento de sistemas e aplicativos.</p></li>
+<li><p>Atuar na área de desenvolvimento de sistemas e aplicativos móveis, aproveitando esse nicho de mercado em ascenção para me destacar e
+contribuir para empresa com meus conhecimentos e habilidades.</p></li>
 </ul>
+<h3>
+<a id="resumo" class="anchor" href="#resumo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Resumo</h3>
+<ul class="nav navbar-nav">
+<li>
+<p>Formado em Análise e Desenvolvimento de Sistemas, fui estagiário da Prodesan, fazendo parte da equipe de desenvolvimento 
+do SIGES (Sistema Integrado de Gestão Escolar), desenvolvido em Java. Era responsável por criar novas páginas, analisar código, corrigir bugs, gerar relatórios e etc.. <br>
+</li><li>
+Técnico em Informática - ETEC - Centro Paula Souza (2011 - 2012). <br>
+</li><li>
+Técnico em Logística - ETEC - Centro Paula Souza (2009 - 2010).</p>
+</li>
+</ul>
+<h3>
 <h3>
 <a id="formação-acadêmica" class="anchor" href="#forma%C3%A7%C3%A3o-acad%C3%AAmica" aria-hidden="true"><span class="octicon octicon-link"></span></a>Formação Acadêmica</h3>
 <ul class="nav navbar-nav">
