--- a/index.html
+++ b/index.html
@@ -33,15 +33,23 @@
 contribuir para empresa com meus conhecimentos e habilidades.</p></li>
 </ul>
 <h3>
-<a id="resumo" class="anchor" href="#resumo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Resumo</h3>
+<a id="resumo" class="anchor" href="#resumo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Resumo de Habilidades e Carreira</h3>
 <ul class="nav navbar-nav">
 <li>
+  Profissional com facilidade de aprender coisas novas e se adaptar a ambientes e filosofias de trabalho.
+</li>
+<li>
 <p>Formado em Análise e Desenvolvimento de Sistemas, fui estagiário da Prodesan, fazendo parte da equipe de desenvolvimento 
-do SIGES (Sistema Integrado de Gestão Escolar), desenvolvido em Java. Era responsável por criar novas páginas, analisar código, corrigir bugs, gerar relatórios e etc.. <br>
-</li><li>
-Técnico em Informática - ETEC - Centro Paula Souza (2011 - 2012). <br>
-</li><li>
-Técnico em Logística - ETEC - Centro Paula Souza (2009 - 2010).</p>
+do SIGES (Sistema Integrado de Gestão Escolar), desenvolvido em Java. Era responsável por criar novas páginas, analisar código, 
+corrigir bugs, gerar relatórios e etc. <br>
+</li>
+<li>
+Trabalhei por um ano como instrutor de informática dando aula nos cursos da S.O.S Educação Profissional. <br>
+</li>
+<li>
+Atualmente, faço parte da equipe da Hause, uma nova start up de desenvolvimento mobile, que com pouco mais de um mês de atividade 
+já ultrapassou a marca de 1000 downloads nos nossos aplicativos na Play Store. Visite a página para mais informações:
+<a href="www.hause.com.br">Hause</a>.</p>
 </li>
 </ul>
 <h3>
@@ -49,7 +57,7 @@ Técnico em Logística - ETEC - Centro Paula Souza (2009 - 2010).</p>
 <a id="formação-acadêmica" class="anchor" href="#forma%C3%A7%C3%A3o-acad%C3%AAmica" aria-hidden="true"><span class="octicon octicon-link"></span></a>Formação Acadêmica</h3>
 <ul class="nav navbar-nav">
 <li>
-<p>Graduação Tecnológica em Análise e Desenvolvimento de Sistemas - Centro Universitário Monte Serrat (2013 - 2015). <br>
+<p>Superior completo em Análise e Desenvolvimento de Sistemas - Centro Universitário Monte Serrat (2013 - 2015). <br>
 </li><li>
 Técnico em Informática - ETEC - Centro Paula Souza (2011 - 2012). <br>
 </li><li>
@@ -60,12 +68,20 @@ Técnico em Logística - ETEC - Centro Paula Souza (2009 - 2010).</p>
 <a id="conhecimentos" class="anchor" href="#conhecimentos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conhecimentos</h3>
 <ul class="nav navbar-nav">
 <li>
-<p>Java; JSP; JPA; JSF; RichFaces; JasperReports; metodologia Scrum/XP; Oracle Database; MySQL; PHP; HTML 5; CSS 3; JBoss; Eclipse; Netbeans.</p>
+<p>Java; JSP; JSF; Desenvolvimento Android; RichFaces; JasperReports; Metodologia Scrum/XP; Oracle Database; MySQL; PHP; HTML 5; CSS 3; Bootstrap; JQuery; Javascript; 
+Android Studio; Genymotion; JBoss; Eclipse; Netbeans; Conhecimento básico de redes e servidores; Manutenção de computadores.</p>
 </li></ul>
 <h3>
 <a id="experiência" class="anchor" href="#experi%C3%AAncia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experiência</h3>
 
  <ul class="nav navbar-nav">
+    <li>
+<p>Desenvolvedor Android/Analista de Sistemas <br>
+Hause - Start Up de Desenvolvimento Mobile <br>
+Março de 2015 - Atualmente <br>
+Um dos membros da nova equipe de desenvolvimento de aplicativos Hause, nossos aplicativos na Play Store já ultrapassam 1000 downloads. 
+Apps como o jogo 33 Seconds, a versão mobile do site Diolinux e etc. Mais informações no <a href="www.hause.com.br">site</a> e na <a href="https://play.google.com/store/apps/dev?id=4809273991361857537&hl=pt_BR">Play Store</a><br> <br></p>
+</li>
  <li>
 <p>Estágio como desenvolvedor java <br>
 Prodesan - Progresso e Desenvolvimento de Santos <br>
@@ -94,7 +110,7 @@ Inglês avançado. </p></li>
 </ul>
 <h3>
 <a id="contato" class="anchor" href="#contato" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contato</h3>
-
+<p>E-mail: <b>luanferrazlff@gmail.com</b> <br>
 <p>Telefone: <b>(013) 99633-8573</b> <br>
 <a href="https://www.linkedin.com/profile/view?id=AAIAABpl9pMBW_iHMaeXMo2OlSVycM4uUFhngZQ&amp;trk=nav_responsive_tab_profile">LinkedIn </a>
 <br>
