Correção na atualização de 21/12

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Trabalhei por um ano como instrutor de informática dando aula nos cursos da S.O
 <li>
 Atualmente, faço parte da equipe da Hause, uma nova start up de desenvolvimento mobile, que com pouco mais de um mês de atividade 
 já ultrapassou a marca de 1000 downloads nos nossos aplicativos na Play Store. Visite a página para mais informações:
-<a href="www.hause.com.br">Hause</a>.</p>
+<a href="http://hause.com.br/">Hause</a>.</p>
 </li>
 </ul>
 <h3>
@@ -80,7 +80,7 @@ Android Studio; Genymotion; JBoss; Eclipse; Netbeans; Conhecimento básico de re
 Hause - Start Up de Desenvolvimento Mobile <br>
 Março de 2015 - Atualmente <br>
 Um dos membros da nova equipe de desenvolvimento de aplicativos Hause, nossos aplicativos na Play Store já ultrapassam 1000 downloads. 
-Apps como o jogo 33 Seconds, a versão mobile do site Diolinux e etc. Mais informações no <a href="www.hause.com.br">site</a> e na <a href="https://play.google.com/store/apps/dev?id=4809273991361857537&hl=pt_BR">Play Store</a><br> <br></p>
+Apps como o jogo 33 Seconds, a versão mobile do site Diolinux e etc. Mais informações no <a href="http://hause.com.br/">site</a> e na <a href="https://play.google.com/store/apps/dev?id=4809273991361857537&hl=pt_BR">Play Store</a><br> <br></p>
 </li>
  <li>
 <p>Estágio como desenvolvedor java <br>
