--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h3>
 <a id="objetivo-profissional" class="anchor" href="#objetivo-profissional" aria-hidden="true"><span class="octicon octicon-link"></span></a>Objetivo Profissional</h3>
 <ul class="nav navbar-nav">
-<li><p>Atuar na área de desenvolvimento de sistemas e aplicativos móveis, aproveitando esse nicho de mercado em ascenção para me destacar e
+<li><p>Atuar na área de desenvolvimento de sistemas ou aplicativos móveis, aproveitando esse nicho de mercado em ascenção para me destacar e
 contribuir para empresa com meus conhecimentos e habilidades.</p></li>
 </ul>
 <h3>
