--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Inglês avançado. </p></li>
 <a id="contato" class="anchor" href="#contato" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contato</h3>
 
 <p>Telefone: <b>(013) 99633-8573</b> <br>
-<p>E-mail: <b>luanferrazlff@gmail.com</b> <br>
+E-mail: <b>luanferrazlff@gmail.com</b> <br>
 <a href="https://www.linkedin.com/profile/view?id=AAIAABpl9pMBW_iHMaeXMo2OlSVycM4uUFhngZQ&amp;trk=nav_responsive_tab_profile">LinkedIn </a>
 <br>
 <a href="https://github.com/LuanFerraz">GitHub </a></p>
